--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
     <title>kodilla 14.4 - React </title>
   </head>
     <body>
-
-      <div id="app">
-      </div>
+    <div id="app"></div>
 
     <script src="https://unpkg.com/react@15.3.2/dist/react.js"></script>
     <script src="https://unpkg.com/react-dom@15.3.2/dist/react-dom.js"></script>
